--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         html, body, svg#dot{
             width: 100%;
         }
+        circle.point{
+            fill: transparent;
+            stroke: #FFF;
+            stroke-width: 4;
+        }
     </style>
 </head>
 <body>
