Rewrite axis using d3 api

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             stroke: #FFF;
             stroke-width: 4;
         }
+        path.domain{
+            display: none;
+        }
+
     </style>
 </head>
 <body>
