--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
     <style type="text/css">
         html, body{
+            margin: 0;
             height: 100%;
             background-color: #EEE;
             font-family: 'Lato', sans-serif;
@@ -22,7 +23,6 @@
         path.domain{
             display: none;
         }
-
     </style>
 </head>
 <body>
