--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
         path.domain{
             display: none;
         }
+        .y.axis text{
+            font-size: 15px;
+            fill: #111111;
+        }
+        .x.axis text{
+            font-size: 25px;
+            fill: #252525;
+        }
     </style>
 </head>
 <body>
