--- a/index.html
+++ b/index.html
@@ -5,31 +5,7 @@
     <title>Nyan Chart</title>
     <script type="text/javascript" src="dist/build.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-    <style type="text/css">
-        html, body{
-            margin: 0;
-            height: 100%;
-            background-color: #EEE;
-            font-family: 'Lato', sans-serif;
-        }
-
-        circle.point{
-            fill: transparent;
-            stroke: #FFF;
-            stroke-width: 4;
-        }
-        path.domain{
-            display: none;
-        }
-        .y.axis text{
-            font-size: 15px;
-            fill: #111111;
-        }
-        .x.axis text{
-            font-size: 25px;
-            fill: #252525;
-        }
-    </style>
+    <link href='dist/style.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <h1>Nyan Chart</h1>
