--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <title>Nyan Chart</title>
     <script type="text/javascript" src="dist/build.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-    <link href='dist/style.css' rel='stylesheet' type='text/css'>
+    <link href='dist/nyan-chart-dot.css' rel='stylesheet' type='text/css'>
+    <style type="text/css">
+        html, body{
+            margin: 0;
+            height: 100%;
+            background-color: #EEE;
+            font-family: 'Lato', sans-serif;
+        }
+    </style>
 </head>
 <body>
     <h1>Nyan Chart</h1>
