Init frontpage header

--- a/index.html
+++ b/index.html
@@ -10,13 +10,23 @@
     <style type="text/css">
         html, body{
             margin: 0;
+            padding: 0;
             height: 100%;
             background-color: #EEE;
             font-family: 'Lato', sans-serif;
         }
+        header{
+            text-align: center;
+            color: #eee;
+            background-color: #333;
+            padding: 2em 0 4em;
+        }
     </style>
 </head>
 <body>
+<header>
     <h1>Nyan Chart</h1>
+    <p>A lib to give color to your data.</p>
+</header>
 </body>
 </html>
