Add max width and centralize example page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             background-color: #EEE;
             font-family: 'Lato', sans-serif;
         }
+
+        article{
+            max-width: 900px;
+            margin: auto;
+        }
+
         header{
             text-align: center;
             color: #eee;
